      * Support for Tracy
      * Warn the player if they try to use a name with all space characters
      * Decoupled the collision system from the rendering system
      * Support for 3D models with fancy new effects
      * Added a low memory mode to use fewer and smaller textures with 3D
   * Fixes
      * PSO and Mizar nebulas have trails again
      * Removed fancy background mode

* 0.11.4 (unreleased)
   * More guards against divides by zero in autonav
   * Fixed warnings on certain OpenGL drivers
   * Fixed toolkit not rerendering when right-clicking on tabbed windows
   * Fixed Marius enclave description
   * Tweaked Za'lek Diablo and Mephisto stats so that they are better suited to their respective roles
   * Updated flicker drive, blink drive, and hyperbolic blink engine descriptions to be more complete and correct
   * Initialize outfit Lua scripts when added in the equipment view so that flicker drive signature gets properly computed
   * Flicker drive no longer displays -10% signature range bonus twice when equipped
   * Fixed crash when selling deployed ship
   * Gave the Dvaered warlord event better criteria so they don't attack the hypergate
   * `shark/sh01_corvette`: have the pilot jump in from the same system as the player
   * `minerva/kex03`: have mission claim the crimson gauntlet to prevent unwanted spawns
   * `dvaered/gauntlet`: have mission claim the system if it can, but not fail if it can't
   * `trader/trader_escort`: player can only escort one group of traders at a time
   * `neburesearch/neburesearch_01`: use the correct faction when complaining
   * Fixed some typos and revised writing

* 0.11.3
   * Don't run discovery event when in cinematic mode
   * Do a better job of updating old save autonav settings
   * Added more checks so tutorial messages don't appear in claimed systems
   * Fixed blinking not breaking stealth
   * Fixed auto-hail message colouring
   * Only do updates with positive delta ticks