@@ -19,7 +19,7 @@ unsigned int escort_create( Pilot *p, const Ship *ship,
 unsigned int escort_createRef( Pilot *p, Pilot *ref,
       const vec2 *pos, const vec2 *vel, double dir,
       EscortType_t type, int add, int dockslot );
-int escort_clearDeployed( Pilot *p );
+int escort_clearDeployed( Pilot *p, int dockslot );
 
 /* Keybind commands. */
 int escorts_attack( Pilot *parent );
